# SomeFantasyCrap

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave.cUWMLF  Labyrinth.lnk
backup/src v0.1/: main.cpp
backup/src v0.1/core/: Constants.h  GameEngine.cpp  GameEngine.h  GameState.h
backup/src v0.1/database/: DatabaseConnection.cpp  DatabaseConnection.h  DatabaseManager.cpp  DatabaseManager.h
backup/src v0.1/models/: Item.cpp
backup/src v0.1/ui/: GameWidget.cpp  GameWidget.h  InventoryWidget.h  MainWindow.cpp  MainWindow.h
backup/src v0.1/utils/: RandomGenerator.cpp
backup/src v1.0/: main.cpp
backup/src v1.0/code/: CMakeLists.txt  core.txt  database.txt  main.txt  models.txt  ui.txt  utils.txt
backup/src v1.0/core/: GameEngine.cpp  GameEngine.h  GameState.cpp  GameState.h
backup/src v1.0/database/: DatabaseManager.cpp  DatabaseManager.h
backup/src v1.0/ui/: GameWidget.cpp  GameWidget.h  InventoryWidget.cpp  MainWindow.cpp
backup/src v1.0/utils/: JsonUtils.h
resources/: resources.qrc
src/: main.cpp  resources.qrc
src/core/: Constants.h  GameEngine.cpp  GameEngine.h  GameState.cpp  GameState.h  Types.h
src/database/: DatabaseConnection.cpp  DatabaseConnection.h  DatabaseManager.cpp  DatabaseManager.h  game_database.sql  identifier.sqlite
src/models/: Door.cpp  Door.h  Item.h  Location.cpp  Location.h  Note.cpp  Note.h  Riddle.cpp  Riddle.h
src/ui/: GameWidget.cpp  GameWidget.h  InventoryPanel.cpp  InventoryPanel.h  InventoryWidget.cpp  InventoryWidget.h  MainWindow.cpp  MainWindow.h  NotesDialog.cpp  NotesDialog.h  RiddleDialog.cpp  RiddleDialog.h
src/utils/: JsonUtils.cpp  RandomGenerator.cpp  RandomGenerator.h  TextGenerator.cpp  TextGenerator.h  TypeWriter.cpp  TypeWriter.h
